apps/claro-ai-crm/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: claro-ai-crm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: registry.claro-ai-crm.test/claro-ai-crm/api:dev-v0.0.2
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: claro-ai-crm
spec:
  selector:
    app: api
  ports:
    - port: 3000
      targetPort: 3000
