apps/claro-ai-crm/base/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: claro-ai-crm
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
      containers:
        - name: web
          image: registry.claro-ai-crm.test/claro-ai-crm/web:dev-v0.0.1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/templates/default.conf.template
              subPath: default.conf.template
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: claro-ai-crm
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
